# wechat-xposed-plugin

./: .gitignore  README.md  RSAPrivateKey  RSAPublicKey  build.gradle  gen_header.sh  gradle.properties  nox.sh  output.bat  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-dict.txt  proguard-rules-outside.pro  proguard-rules-release.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/com/example/zlx/xposeapplication/: Db.java  Define.java  ImgThread.java  Main.java  MainActivity.java  MonitorModule.java  MySync.java  ScanThread.java  SendThread.java  SftpThread.java  TouchThread.java  UserConfig.java  VerifyThread.java  VideoRunnable.java  VoiceRunnable.java  VoiceThread.java  WechatAction.java  WechatClass.java  WechatHook.java  XposedUtils.java
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
library-release/: library-release.aar
mybase/: build.gradle
mybase/src/main/: AndroidManifest.xml
mybase/src/main/java/com/example/zlx/hardware/: HardwareInfo.java  XBuild.java  XCpu.java  XDisplay.java  XPhone.java
mybase/src/main/res/values/: strings.xml
mynative/: build.gradle
mynative/src/cpp/: Android.mk  Application.mk  Base64.cpp  Base64.h  aes.h  aes_cbc.cpp  aes_core.cpp  aes_jni_wrapper.cpp  aes_jni_wrapper.h  aes_locl.h  cbc128.cpp  cbc128.h  check_sign.cpp  check_sign.h  native-lib.cpp  native-lib.h
mynative/src/main/: AndroidManifest.xml
mynative/src/main/res/values/: strings.xml
(+19 files in other folders)
